ui fix on mobile screen

--- a/@tr/src/app/layout/d-header/d-header.component.scss
+++ b/@tr/src/app/layout/d-header/d-header.component.scss
@@ -8,7 +8,7 @@
 }
 .hamburger {
     position: fixed;
-    top: .5rem;
+    top: 2px;
     left: .5rem;
 }
 .mat-drawer-container {
