--- a/projects/tr-corporate/src/app/dashboard/dashabord.component.scss
+++ b/projects/tr-corporate/src/app/dashboard/dashabord.component.scss
@@ -1,3 +1,4 @@
+@import '~@mucrest/ng-design/assets/styles/0-plugins/plugins-dir';
 mc-side-navbar {
 [class^="mc-"], [class*=" mc-"], [class^="mcf-"], [class*=" mcf-"] {
     &::before {
@@ -38,6 +39,9 @@ mc-side-navbar {
     align-items: center;
     cursor: pointer;
     padding: 0;
+    @include media-breakpoint-down(md) { 
+        display: none;
+     }
     .user-avatar {
         background: #1F47F5;
         color: white;
