--- a/projects/tr-corporate/src/app/settings/settings.component.scss
+++ b/projects/tr-corporate/src/app/settings/settings.component.scss
@@ -7,7 +7,7 @@
     position: fixed;
     width: calc(100% - 4.375rem);
     @include media-breakpoint-down(md) {
-        margin: 0;
+        margin-left: 0;
         width: 100%;
      }
     .mat-drawer.mat-drawer-side {
@@ -25,11 +25,16 @@
              }
         }
     }
+    ::ng-deep .mat-drawer-opened ~ .mat-drawer-content {
+        .togglebtn {
+            transform: rotate(180deg);
+        }    
+    }
 }
 .togglebtn {
     position: absolute;
-    left: 50px;
-    top: 12px;
+    left: 6px;
+    top: 6px;
     font-size: 1.5rem;
     z-index: 9999;
     border: #EBEAED 1px solid;
@@ -40,4 +45,10 @@
     @include media-breakpoint-down(md) {
         display: none;
      }
+}
+.mobile-togglebtn {
+    position: absolute;
+    right: 2px;
+    top: 10px;
+    font-size: 20px;
 }
